<resources>
    <string name="app_name">FyberAndroidApp</string>
    <string name="action_settings">Settings</string>
    <string name="uid">uid</string>
    <string name="api_key">Api Key</string>
    <string name="app_id">App Id</string>
    <string name="pub0">pub0</string>
    <string name="get_offers">Get Offers</string>
    <string name="no_offers">No Offers</string>
    <string name="test">Test</string>
</resources>
